--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.analysis.extraPaths": ["/home/vscode/.local/bin","/home/vscode/.local/lib/python3.9/site-packages"]
+    "python.analysis.extraPaths": ["/usr/local/bin","/usr/local/lib/python3.9/site-packages"]
 }
